# sec-10q

./: .gitignore  Cargo.toml  README.md
output/GE/: ge-20090630.json  ge-20090930.json  ge-20100331.json  ge-20100630.json  ge-20100930.json  ge-20110331.json  ge-20110630.json  ge-20110930.json  ge-20120331.json  ge-20120630.json  ge-20120930.json  ge-20130331.json  ge-20130630.json  ge-20130930.json  ge-20150331.json  ge-20150630.json  ge-20150930.json  ge-20160331.json  ge-20160630.json  ge-20160930.json  ge-20170331.json  ge-20170630.json  ge-20170930.json  ge-20180331.json  ge-20180630.json  ge-20180930.json  ge-20190331.json  ge-20200930_htm.json  ge-20210331_htm.json  ge-20210630_htm.json  ge-20210930_htm.json  ge-20220331_htm.json  ge-20220630_htm.json  ge1q202010-q_htm.json  ge2q201910-q_htm.json  ge2q202010-q_htm.json  ge3q201910-q_htm.json
output/PLTR/: d175251d10q_htm.json  d178745d10q_htm.json  pltr-20200930.json  pltr-20210331.json  pltr-20220331_htm.json  pltr-20220630_htm.json
src/: fetch.rs  helpers.rs  io.rs  main.rs  parser.rs  utils.rs
