[package]
name = "stonks_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
csv = "1.1.6"
regex = "1.6.0"
roxmltree = "0.15.0"
indicatif = "0.17.1"
console = "0.15.2"
clap = { version = "4.0.8", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = {version = "1.0.145",  features = ["derive"]}
serde_json = "1.0.85"
